@@ -121,3 +121,4 @@ Vesa Jaaskelainen <jaaskela@tietomyrsky.fi>
 Yedidyah Bar-David <didi@post.tau.ac.il>
 Yury V. Umanets <umka@namesys.com>
 Yuri Zaporogets <yuriz@ukr.net>
+Vitaly Fertman <vitaly@namesys.com>
